k3s/convertx/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
  namespace: utilities
  labels:
    app: convertx
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: convertx
  template:
    metadata:
      labels:
        app: convertx
    spec:
      containers:
        - name: convertx
          image: ghcr.io/c4illin/convertx
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "2048Mi"
              cpu: "400m"
          volumeMounts:
            - mountPath: /app/data
              name: data-vol
      volumes:
        - name: data-vol
          hostPath:
            path: /opt/k3s-data/convertx
            type: DirectoryOrCreate
