k3s/convertx/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convertx-svc
  namespace: utilities
spec:
  selector:
    app: convertx
  ports:
    - name: http
      port: 80
      targetPort: 3000
