k3s/convertx/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convertx-ingress
  namespace: utilities
spec:
  rules:
    - host: convertx.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: convertx-svc
                port:
                  number: 80
